// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PgSearchPlugin condition-based search on stsv column returns only title-matched rows for fullTextStsv condition 1`] = `
{
  "goals": {
    "nodes": [
      {
        "description": "Second in years female given. Us firmament. She'd kind there let moved thing evening saying set whales a fowl heaven.",
        "id": "[ID]",
        "title": "green fowl",
      },
    ],
  },
}
`;

exports[`PgSearchPlugin condition-based search on tsv column returns matching rows ordered by relevance (ts_rank DESC) 1`] = `
{
  "goals": {
    "nodes": [
      {
        "description": "Second in years female given. Us firmament. She'd kind there let moved thing evening saying set whales a fowl heaven.",
        "id": "[ID]",
        "title": "green fowl",
      },
      {
        "description": "Appear evening that gathered saying. Sea subdue so fill stars. Bring is man divided behold fish their. Also won't fowl.",
        "id": "[ID]",
        "title": "evenings",
      },
      {
        "description": "Heaven. Tree creeping was. Gathered living dominion us likeness first subdue fill. Fowl him moveth fly also the is created.",
        "id": "[ID]",
        "title": "heaven",
      },
    ],
  },
}
`;
